--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.0
   intl: ^0.18.0
   image_picker: ^1.0.0
+  file_picker: ^6.0.0
   qr_flutter: ^4.1.0
   carousel_slider: ^4.2.0
   pin_code_fields: ^8.0.0
