--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pin_code_fields: ^8.0.0
   lottie: ^2.7.0
   crypto: ^3.0.0
+  geolocator: ^11.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
