--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   lottie: ^2.7.0
   crypto: ^3.0.0
   geolocator: ^11.0.0
+  geocoding: ^2.1.0
+  firebase_core: ^2.32.0
+  firebase_messaging: ^14.7.0
+  flutter_local_notifications: ^15.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -56,6 +60,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -111,3 +116,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/Avatar.png"
+  min_sdk_android: 21
