--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^2.32.0
   firebase_messaging: ^14.7.0
   flutter_local_notifications: ^15.1.0
+  google_sign_in: ^6.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
