--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Ứng dụng này cần quyền truy cập vị trí để cung cấp các dịch vụ liên quan đến địa điểm gần bạn.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Ứng dụng này cần quyền truy cập vị trí để cung cấp các dịch vụ liên quan đến địa điểm gần bạn.</string>
 </dict>
 </plist>
