--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,12 @@ dependencies:
   crypto: ^3.0.0
   geolocator: ^11.0.0
   geocoding: ^2.1.0
+  google_places_flutter: ^2.0.8
   firebase_core: ^2.32.0
   firebase_messaging: ^14.7.0
   flutter_local_notifications: ^15.1.0
   google_sign_in: ^6.2.1
+  permission_handler: ^11.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
