Update intergrate features

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx2G -XX:+UseG1GC -XX:MaxGCPauseMillis=1500
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.parallel=false
+org.gradle.workers.max=1
