--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_local_notifications: ^15.1.0
   google_sign_in: ^6.2.1
   permission_handler: ^11.0.0
+  web_socket_channel: ^2.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
